# skills

./: .coverage  .cursorrules  .gitignore  CHANGELOG-HUB.md  HANDOFF.md  KNOWLEDGE-MAP.mermaid  LICENSE  Makefile  PROJECT-ONBOARDING.md  README.md  README.original.md  pyproject.toml  sorted_root_skills.txt  validation-report.md
.agent/: AGENT.md
.agents/: AGENTS.md  skill_audit.txt
.agents/skills/scaffolding-expert/examples/fastapi-starter/{{project_name}}/: pyproject.toml
.agents/skills/scaffolding-expert/examples/fastapi-starter/{{project_name}}/{{module_name}}/: main.py
.claude/: CLAUDE.md
.gemini/: GEMINI.md
adk-expert/: SKILL.md
api-architect/: CHANGELOG.md  MEMORY.md  README.md  SKILL.md
api-designer/: CHANGELOG.md  README.md  SKILL.md
architecture/: CHANGELOG.md  README.md  SKILL.md
azure-devops/: CHANGELOG.md  README.md  SKILL.md  tasks.md
benchmark-expert/: CHANGELOG.md  LEARNINGS.md  README.md  SKILL.md  tasks.md
brainstorming/: CHANGELOG.md  LEARNINGS.md  README.md  SKILL.md  tasks.md
clean-code-mentor/: README.md  SKILL.md  tasks.md
cli-expert/: CHANGELOG.md  SKILL.md
context-graph/: CHANGELOG.md  SKILL.md  tasks.md
dashboard/: app.py
devsecops-expert/: CHANGELOG.md  MEMORY.md  README.md  SKILL.md  tasks.md
django-expert/: CHANGELOG.md  README.md  SKILL.md
django-expert/examples/boilerplate_uv/: .env.example  README.md  pyproject.toml
django-expert/examples/boilerplate_uv/core/: settings.py  urls.py
fastapi-expert/: CHANGELOG.md  LEARNINGS.md  MEMORY.md  README.md  SKILL.md  tasks.md
flutter-fvm/: AUDIT-REPORT.md  CHANGELOG.md  README.md  REGISTRATION-SUMMARY.md  SKILL-FACTORY-VALIDATION.md  SKILL.md
frontend-expert/: CHANGELOG.md  MEMORY.md  README.md  SKILL.md  tasks.md
git-workflow/: CHANGELOG.md  LEARNINGS.md  MEMORY.md  README.md  SKILL.md  tasks.md
golang-expert/: CHANGELOG.md  LEARNINGS.md  README.md  SKILL.md  VALIDATION-REPORT.md  tasks.md
golang-testing-expert/: CHANGELOG.md  MEMORY.md  README.md  SKILL.md  tasks.md
hardness-expert/: CHANGELOG.md  README.md  SKILL.md  hardness-expert-compress.skill.md  hardness-expert-rehydrate.skill.md  hardness-expert-sync.skill.md
harness-expert/: CHANGELOG.md  LEARNINGS.md  MEMORY.md  README.md  SKILL.md  harness-expert-compress.skill.md  harness-expert-rehydrate.skill.md  harness-expert-sync.skill.md  tasks.md
harness-science/: CHANGELOG.md  SKILL.md
hb/: Makefile  coverage.out  go.mod  go.sum  main.go
knowledge-architect/: CHANGELOG.md  LEARNINGS.md  README.md  SKILL.md  tasks.md
multi-agent-orchestrator/: SKILL.md
observability-expert/: README.md  SKILL.md
onboarding-navigator/: CHANGELOG.md  README.md  SKILL.md  tasks.md
python-uv/: CHANGELOG.md  LEARNINGS.md  README.md  SKILL.md
scaffolding-expert/: CHANGELOG.md  LEARNINGS.md  README.md  SKILL.md
scripts/: auto_fix_memory.py  cleanup_separators.py  compressor_utility.py  consolidate_changelogs.py  generate-skills-dist.sh  generate_cursorrules.py  hub.py  (+11 more)
(+943 files in other folders)
