[project]
name = "django-expert-boilerplate"
version = "0.1.0"
description = "Professional Django boilerplate with UV, HTMX, and Celery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-environ>=0.11.2",
    "django-htmx>=1.17.2",
    "django-extensions>=3.2.3",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "django-debug-toolbar>=4.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py"]
