[project]
name = "{{project_name}}"
version = "0.1.0"
description = "{{description}}"
authors = [{name = "{{author}}"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
{% if database == 'postgresql' %}
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
{% endif %}
{% if include_auth %}
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
{% endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true